resources/assets/less/bem/game-mode.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.game-mode {
  line-height: normal;
  width: 100%;

  @media @desktop {
    margin-left: auto;
    width: auto;
  }

  &__items {
    list-style: none;
    display: flex;
    padding: 0;
    margin: 0 -5px; // 5px margin __item
    justify-content: space-around;
    flex-wrap: wrap;

    @media @desktop {
      margin: -10px -10px; // 10px margin __item
      justify-content: flex-end;
    }
  }

  &__item {
    margin: 10px 5px; // linked to __items
    flex: none;

    @media @desktop {
      margin-left: 10px;
      margin-right: $margin-left;
    }
  }

  &__set-default {
    position: absolute;
    bottom: 100%;
    margin-bottom: 20px;
    right: 0;
  }
}

